--- a/package.json
+++ b/package.json
@@ -2,29 +2,44 @@
   "name": "express-auto-swagger",
   "version": "0.0.1",
   "description": "",
+  "license": "MIT",
+  "author": "Nicholas McCready",
   "main": ".tmp/server.js",
   "scripts": {
-    "start": "node .tmp/server.js",
     "build": "yarn rimraf .tmp && yarn tsc",
+    "lint": "eslint \"./**\" --ext .js,.ts,.tsx --color",
+    "prepare": "sort-package-json",
+    "prod:start": "node .tmp/server.js",
+    "start": "ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nicholas McCready",
-  "license": "MIT",
   "dependencies": {
+    "@types/bluebird": "^3.5.30",
+    "@types/errorhandler": "^1.5.0",
     "@types/express": "4.11.1",
     "@types/node": "12.12.4",
+    "@znemz/build-info": "0.1",
+    "@znemz/js-common-eslint-config": "0.2",
+    "bluebird": "^3.7.2",
     "body-parser": "1.19.0",
+    "debug-fabulous": "^2.0.1",
+    "errorhandler": "^1.5.1",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "express": "4.17.1",
-    "inversify": "5.0.1",
-    "inversify-express-utils": "6.3.2",
+    "inversify": "^4.13.0",
+    "inversify-express-utils": "^4.2.2",
     "lodash": "^4.17.15",
     "passport": "0.4.0",
     "passport-google-oauth": "2.0.0",
+    "prettier": "^1.16.4",
     "react-helmet-async": "1.0.4",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.0",
+    "sort-package-json": "^1.21.0",
     "swagger-express-ts": "1.0.1",
     "swagger-ui-dist": "^3.24.0",
+    "ts-node": "^8.10.1",
     "typescript": "3.6"
   }
 }
