--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "noResolve": false,
     "moduleResolution": "node",
     "rootDir": "./",
-    "outDir": ".tmp"
+    "outDir": ".tmp",
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
