added postgre sql, knex and migration support via db-migrate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "moduleResolution": "node",
     "rootDir": "./",
     "outDir": ".tmp",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowJs": true
   },
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
