--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "main": ".tmp/server.js",
   "scripts": {
     "build": "yarn rimraf .tmp && yarn tsc",
+    "dbsync": "nf run -- db-migrate --config database.js $@",
     "lint": "eslint \"./**\" --ext .js,.ts,.tsx --color",
     "prepare": "sort-package-json",
     "prod:start": "node .tmp/server.js",
-    "start": "ts-node server.ts",
+    "start": "nf run -- ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,16 +23,22 @@
     "@znemz/js-common-eslint-config": "0.2",
     "bluebird": "^3.7.2",
     "body-parser": "1.19.0",
+    "config": "^3.3.1",
+    "db-migrate": "^0.11.11",
+    "db-migrate-pg": "^1.2.2",
     "debug-fabulous": "^2.0.1",
     "errorhandler": "^1.5.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "express": "4.17.1",
+    "foreman": "^3.0.1",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^4.2.2",
+    "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "passport": "0.4.0",
     "passport-google-oauth": "2.0.0",
+    "pg": "^8.2.1",
     "prettier": "^1.16.4",
     "react-helmet-async": "1.0.4",
     "reflect-metadata": "0.1.13",
